--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@tanstack/react-query": "^5.49.2",
     "ai": "^3.2.16",
+    "apexcharts": "^3.49.2",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.12",
     "langchain": "^0.2.8",
     "next": "14.2.4",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.0.19",
